samples/_failures_safe/1761645470_4d65ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a495c95a.c: In function ‘main’:
./samples/SAFE/__tmp_a495c95a.c:156:12: error: missing terminating " character
  156 |     printf("Available events: 0=START, 1=DATA_READY, 2=PROCESS_COMPLETE, 3=WRITE_COMPLETE, 4=ERROR,
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a495c95a.c:156:5: error: expected expression at end of input
  156 |     printf("Available events: 0=START, 1=DATA_READY, 2=PROCESS_COMPLETE, 3=WRITE_COMPLETE, 4=ERROR,
      |     ^~~~~~
./samples/SAFE/__tmp_a495c95a.c:156:5: error: expected declaration or statement at end of input
